// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should extract article tokens from "Article D.  212-4" 1`] = `
Array [
  Object {
    "code": undefined,
    "text": "D. 212-4",
  },
]
`;

exports[`should extract article tokens from "Article D. 212-4" 1`] = `
Array [
  Object {
    "code": undefined,
    "text": "D. 212-4",
  },
]
`;

exports[`should extract article tokens from "Article D.212" 1`] = `
Array [
  Object {
    "code": undefined,
    "text": "D.212",
  },
]
`;

exports[`should extract article tokens from "Article D.212-5" 1`] = `
Array [
  Object {
    "code": undefined,
    "text": "D.212-5",
  },
]
`;

exports[`should extract article tokens from "Article D.212-5-6" 1`] = `
Array [
  Object {
    "code": undefined,
    "text": "D.212-5-6",
  },
]
`;

exports[`should extract article tokens from "Article D.212-5-6-7" 1`] = `
Array [
  Object {
    "code": undefined,
    "text": "D.212-5-6-7",
  },
]
`;

exports[`should extract article tokens from "Article D-212" 1`] = `
Array [
  Object {
    "code": undefined,
    "text": "D-212",
  },
]
`;

exports[`should extract article tokens from "Article D-212-4" 1`] = `
Array [
  Object {
    "code": undefined,
    "text": "D-212-4",
  },
]
`;

exports[`should extract article tokens from "Article D212 du code penal et article R413" 1`] = `
Array [
  Object {
    "code": undefined,
    "text": "R413",
  },
]
`;

exports[`should extract article tokens from "Article D212" 1`] = `
Array [
  Object {
    "code": undefined,
    "text": "D212",
  },
]
`;

exports[`should extract article tokens from "Article D212-3" 1`] = `
Array [
  Object {
    "code": undefined,
    "text": "D212-3",
  },
]
`;

exports[`should extract article tokens from "Article X*212-4" 1`] = `Array []`;

exports[`should extract article tokens from "Article XD212" 1`] = `Array []`;

exports[`should extract article tokens from "L. 1251-23xx du code du travail" 1`] = `
Array [
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "L. 1251-23xx",
  },
]
`;

exports[`should extract article tokens from "les modalités fixées par les articles L. 2313‑8 et R. 2313-3 à R. 2313-6 du code du travail ainsi que le L. 1251-18" 1`] = `
Array [
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "L. 2313‑8",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "R. 2313-3 à R. 2313-6",
  },
  Object {
    "code": undefined,
    "text": "L. 1251-18",
  },
]
`;

exports[`should extract article tokens from "l’allocation de remplacement pour maternité ou paternité, prévues aux articles L. 613-19 à L.613-19-2 et L. 722-8 à 25 du code de la sécurité sociale, aux articles L. 732-10 à L. 732-12-1 du code rural et à l’article 17 de la loi n° 97-1051 du 18 novembre 1997 d’orientation sur la pêche maritime et les cultures marines" 1`] = `
Array [
  Object {
    "code": Object {
      "id": "LEGITEXT000006073189",
      "name": "code de la sécurité sociale",
    },
    "text": "L. 613-19 à L.613-19-2",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006073189",
      "name": "code de la sécurité sociale",
    },
    "text": "L. 722-8 à 25",
  },
]
`;

exports[`should find with code for actual real life set 1`] = `
Array [
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "L. 2313-8",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "R. 2313-3 à R. 2313-6",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "R. 2242-7",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "L. 2242-8",
  },
  Object {
    "code": undefined,
    "text": "R. 2242-2 à R. 2242-11",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "L. 2242-9",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "R. 2242-9 à R. 2242-11",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "D. 1142-2",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "D. 1142-2-1",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "L. 4521-1",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "D. 1142-2",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "D. 1142-2-1",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "R. 1234-9",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "D. 8223-2",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "R. 1263-3",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "R. 1263-4",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "R. 1263-6",
  },
  Object {
    "code": undefined,
    "text": "L. 4412-2",
  },
  Object {
    "code": undefined,
    "text": "R. 4412-97/II",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "L. 2315-24",
  },
  Object {
    "code": undefined,
    "text": "L. 2315-38 à 40",
  },
  Object {
    "code": undefined,
    "text": "L1111-2",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "L. 2314-6",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "R. 2314-6",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006072050",
      "name": "code du travail",
    },
    "text": "L 2312-36",
  },
  Object {
    "code": undefined,
    "text": "R. 2312-8",
  },
  Object {
    "code": undefined,
    "text": "R. 2312-10 à R. 2312-14",
  },
  Object {
    "code": undefined,
    "text": "R. 2312-9",
  },
  Object {
    "code": undefined,
    "text": "R. 2312-10 à R. 2312-14",
  },
]
`;

exports[`should resolve example codes 1`] = `
Object {
  "LEGITEXT000006072050": Object {
    "articles": Array [
      Object {
        "fmt": "L2313-8",
        "id": "LEGIARTI000036262496",
        "text": "L. 2313‑8",
      },
      Object {
        "fmt": "R2313-3",
        "id": "LEGIARTI000039624940",
        "text": "R. 2313-3",
      },
      Object {
        "fmt": "R2313-4",
        "id": "LEGIARTI000036414723",
      },
      Object {
        "fmt": "R2313-5",
        "id": "LEGIARTI000039347715",
      },
      Object {
        "fmt": "R2313-6",
        "id": "LEGIARTI000039624937",
        "text": "R. 2313-6",
      },
      Object {
        "fmt": "L1251-18",
        "id": "LEGIARTI000006901269",
        "text": "L. 1251-18",
      },
    ],
    "name": "code du travail",
  },
}
`;

exports[`should resolve example codes 2`] = `
Object {
  "LEGITEXT000006072050": Object {
    "articles": Array [
      Object {
        "fmt": "L1251-23",
        "id": "LEGIARTI000006901276",
        "text": "L. 1251-23xx",
      },
    ],
    "name": "code du travail",
  },
}
`;

exports[`should resolve ranges 1`] = `
Array [
  Object {
    "LEGITEXT000006072050": Object {
      "articles": Array [
        Object {
          "fmt": "L1251-21",
          "id": "LEGIARTI000006901274",
          "text": "L. 1251-21",
        },
        Object {
          "fmt": "L1251-22",
          "id": "LEGIARTI000006901275",
        },
        Object {
          "fmt": "L1251-23",
          "id": "LEGIARTI000006901276",
        },
      ],
      "name": "code du travail",
    },
  },
  Object {
    "LEGITEXT000006072050": Object {
      "articles": Array [
        Object {
          "fmt": "L1233-34",
          "id": "LEGIARTI000036762068",
          "text": "L. 1233‑34",
        },
        Object {
          "fmt": "L1233-35",
          "id": "LEGIARTI000036261799",
        },
        Object {
          "fmt": "L1233-35-1",
          "id": "LEGIARTI000035643013",
          "text": "L. 1233-35-1",
        },
      ],
      "name": "code du travail",
    },
  },
  Object {
    "LEGITEXT000006072050": Object {
      "articles": Array [
        Object {
          "fmt": "L2312-72",
          "id": "LEGIARTI000035611295",
          "text": "L. 2312-72",
        },
        Object {
          "fmt": "L2312-73",
          "id": "LEGIARTI000035611297",
        },
        Object {
          "fmt": "L2312-74",
          "id": "LEGIARTI000035611299",
        },
        Object {
          "fmt": "L2312-75",
          "id": "LEGIARTI000035611301",
        },
        Object {
          "fmt": "L2312-76",
          "id": "LEGIARTI000035611303",
        },
        Object {
          "fmt": "L2312-77",
          "id": "LEGIARTI000035611305",
          "text": "2312-77",
        },
      ],
      "name": "code du travail",
    },
  },
  Object {},
  Object {
    "LEGITEXT000006072050": Object {
      "articles": Array [
        Object {
          "fmt": "D5132-10-1",
          "id": "LEGIARTI000029775717",
        },
        Object {
          "fmt": "D5132-10-2",
          "id": "LEGIARTI000029775713",
        },
        Object {
          "fmt": "D5132-10-3",
          "id": "LEGIARTI000029775708",
        },
        Object {
          "fmt": "D5132-10-4",
          "id": "LEGIARTI000029775703",
          "text": "D. 5132-10-4",
        },
      ],
      "name": "code du travail",
    },
  },
  Object {
    "LEGITEXT000006072050": Object {
      "articles": Array [
        Object {
          "fmt": "D5132-10-1",
          "id": "LEGIARTI000029775717",
        },
        Object {
          "fmt": "D5132-10-2",
          "id": "LEGIARTI000029775713",
        },
        Object {
          "fmt": "D5132-10-3",
          "id": "LEGIARTI000029775708",
        },
        Object {
          "fmt": "D5132-10-4",
          "id": "LEGIARTI000029775703",
          "text": "D. 5132-10-4",
        },
      ],
      "name": "code du travail",
    },
  },
  Object {
    "LEGITEXT000006072050": Object {
      "articles": Array [
        Object {
          "fmt": "L2315-38",
          "id": "LEGIARTI000035626459",
          "text": "L. 2315-38",
        },
        Object {
          "fmt": "L2315-39",
          "id": "LEGIARTI000036262434",
        },
        Object {
          "fmt": "L2315-40",
          "id": "LEGIARTI000035626463",
          "text": "40",
        },
      ],
      "name": "code du travail",
    },
  },
  Object {
    "LEGITEXT000006073189": Object {
      "articles": Array [
        Object {
          "fmt": "L351-1",
          "id": "LEGIARTI000023035688",
          "text": "L. 351-1",
        },
        Object {
          "fmt": "L351-1-1",
          "id": "LEGIARTI000028498678",
        },
        Object {
          "fmt": "L351-1-2",
          "id": "LEGIARTI000025014540",
        },
        Object {
          "fmt": "L351-1-3",
          "id": "LEGIARTI000028498841",
        },
        Object {
          "fmt": "L351-1-4",
          "id": "LEGIARTI000035640851",
        },
        Object {
          "fmt": "L351-2",
          "id": "LEGIARTI000031686263",
        },
        Object {
          "fmt": "L351-3",
          "id": "LEGIARTI000028498769",
        },
        Object {
          "fmt": "L351-3-1",
          "id": "LEGIARTI000031667793",
        },
        Object {
          "fmt": "L351-4",
          "id": "LEGIARTI000037063369",
        },
        Object {
          "fmt": "L351-4-1",
          "id": "LEGIARTI000017845585",
        },
        Object {
          "fmt": "L351-4-2",
          "id": "LEGIARTI000028497884",
        },
        Object {
          "fmt": "L351-5",
          "id": "LEGIARTI000021537902",
          "text": "L. 351-5",
        },
      ],
      "name": "code de la sécurité sociale",
    },
  },
]
`;
